--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5"
   }
